[FIX] - search widget width increased -pirate forms label vertical align

--- a/assets/sass/2_elements/_pirate_forms.scss
+++ b/assets/sass/2_elements/_pirate_forms.scss
@@ -61,7 +61,7 @@
   /* Adjust label line-height */
   .form-group label.control-label,
   .form-group.is-focused label.control-label {
-    line-height: 1.07143;
+    line-height: 1.07143 !important;
   }
 
   .pirate-forms-submit-button {
